[tool.poetry]
name = "streamtube"
version = "0.1.0"
description = ""
authors = ["Kirby Heck <kirby.heck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.16"
scipy = ">=1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
